This file summarizes changes in WinMerge releases.
Numbers in parentheses refer to SourceForge.net tracker item numbers (#XXXXX) or
to Subversion revision numbers (rXXXXX).

WinMerge 2.7.7.6
  Remove sintance.h/sintance.cpp as not compatible with GPL (#1886580)

WinMerge 2.7.7.5 - 2008-02-22 (r5069)
  Cleaning up Help-menu (#1875111)
  Right-align tab size number in editor options (r5037)
  Move Time difference ignore -option to compare options (#1892283)
  Add option to select temporary folder (#1893167)
  Show file encoding in file compare statusbar (#1895629)
  Unify EOL style strings in folder compare and file compare (#1896462)
  Remove "DisplayBinaryFiles" and "EditBinaryFiles" plugin (#1899161)
  BugFix: Potential lockup in folder compare (#1865131, #1889907)
  BugFix: Line filter didn't filter non-ascii lines correctly (#1880628)
  BugFix: GNU General Public License name in menu (#1868989)
  BugFix: Didn't switch back to content compare once switched to quick 
    compare in folder compare (#1770373)
  BugFix: Quick compare didn't ignore EOL differences (#1884717)
  Translation updates:
  - Croatian (r5032)
  - Czech (r5017)
  - German (r5038)
  - Slovak (#1895583)
  - Swedish (#1891326)

WinMerge 2.7.7.4 - 2008-02-07 (r5011)
  Detect (and read/write) UTF-8 files without BOM (#1879271)
  Tell user that file is not a conflict file (#1880423)
  Allow opening conflict file from command line (#1880857)
  Use radio symbol for current EOL menu item (#1869755)
  Ask and create pair for unique folder and open them (#1881454)
  Add publisher info to version resource (#1884920)
  Move "Zoom In/Out" to own sub menu (#1879340)
  Installer: Add more version resource info (#1885793)
  Reset text zoom to default size with Ctrl + * (#1886664)
  BugFix: Always return 0 to command line (#1854419)
  BugFix: Merge/Delete deleted items from read-only sides (#1882019)
  BugFix: Shellextension had no publisher info and wrong
    description (#1878828)